tests/negative/spawn_in_transaction.def
// Negative unit test for a spawn inside of a transaction.

def foo () -> void
begin
    atomic begin
        spawn foo();
    end
end
